@@ -1,3 +1,5 @@
+* Fixed div structure in hierarchy and filter form --tobi
+
 2008/1/23 -- released version 2.3.0
 
 * Integrated TCPPing Probe -- Norman Rasmussen
